# ezcache

./: README.md  pyproject.toml  requirements.txt  tests.py
ezcache/: __init__.py  api.py
