[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezcache"
version = "0.1.0"
description = "A Python library to easily create and manage caches of various types"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = []
authors = [
    {name = "Andrew Petty", email = "andrewtpetty03@gmail.com"}
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["ezcache"]

[project.urls]
Homepage = "https://github.com/vangauthic/ezcache/"